--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                 <legend><b>Formulário de Clientes</b></legend>
                 <br>    
                 <div class="inputBox">
-                    <input type="text" name="nome" id="nome" class="inputUser" required>
+                    <input type="text" name="nome" id="nome" class="inputUser" required minlength="2">
                     <label for="nome" class="labelInput">Nome Completo</label>
                 </div>
                 <br>  
                 <br>  
                 <div class="inputBox">
-                    <input type="text" name="email" id="email" class="inputUser" required>
+                    <input type="text" name="email" id="email" class="inputUser" required pattern="[^ @]*@[^ @]*" >
                     <label for="email" class="labelInput">E-mail</label>
                 </div>
                 <br>  
